--- a/courses.css
+++ b/courses.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700|Arimo:400,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700|Arimo:400,700);
 
 body {
     font-family: 'Roboto', sans-serif;
